Added Footer and logo

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     -->
     <footer>
       <p>
-        Copyright 2021 | Created with <i class="fa fa-heart"></i> by
+        Copyright &copy; 2021 | Created by
         <a target="_blank" href="https://www.linkedin.com/in/diptendu-biswas-734988192/">Diptendu Biswas</a>
       </p>
     </footer>
